# Albedo

./: CMakeLists.txt  README.md  appDefines.h.in  readme_file.txt
Application/: Albedo.cpp  Albedo.h  CMakeLists.txt  app.rc  app.rc.in  appDecl.h  appLogic.cpp  appLogic.h  appViewManager.cpp  appViewManager.h  appWizardSample.cpp  appWizardSample.h
CMakeInput/: AlbedoConfig.cmake.in  AlbedoDefines.h.in  c2dUse.cmake.in
CMakeModules/: APPConfigMacro.cmake  FindALBA.cmake  FindCppUnit.cmake  FindMAF.cmake
Common/: CMakeLists.txt  appCommonDefines.h.in  appUtils.cpp  appUtils.h
Documentation/: CMakeLists.txt
Documentation/Doxygen/: CMakeLists.txt  app_doxyfile.in
ExternalLibraries/: CMakeLists.txt  Configure.cmake  UseAPPExternalLibraries.cmake.in
ExternalLibraries/modules/: APPExternalLibrariesConfigMacro.cmake
Gui/: CMakeLists.txt  appGUI.cpp  appGUI.h  appGUIDraw.cpp  appGUIDraw.h  appGUIHintBox.cpp  appGUIHintBox.h  appGUIHyperLink.cpp  appGUIHyperLink.h  appGUILabel.cpp  appGUILabel.h  appGUISeparator.cpp  appGUISeparator.h  appGuiDefines.h.in  appSideBar.cpp  appSideBar.h  appTaskBar.cpp  appTaskBar.h
Installer/: AlbedoInstallerScript.nsi.in  AlbedoLicence.rtf  AlbedoLicence.txt
Installer/Config/Dictionary/: dictionary.dic
Installer/Config/Templates/: ReportTemplate.rtf  report_template.html
Interaction/: CMakeLists.txt  appInteractionDefines.h.in  appInteractor2DMeasure.cpp  appInteractor2DMeasure.h  appInteractor2DMeasure_Angle.cpp  appInteractor2DMeasure_Angle.h  appInteractor2DMeasure_Comment.cpp  appInteractor2DMeasure_Comment.h  appInteractor2DMeasure_Distance.cpp  appInteractor2DMeasure_Distance.h  appInteractor2DMeasure_DistancePoint.cpp  appInteractor2DMeasure_DistancePoint.h  appInteractor2DMeasure_Indicator.cpp  appInteractor2DMeasure_Indicator.h  appInteractor2DMeasure_Point.cpp  appInteractor2DMeasure_Point.h  appInteractor2DSample.cpp  appInteractor2DSample.h  appInteractor2DTemplate.cpp  appInteractor2DTemplate.h  appInteractor2DTransform.cpp  appInteractor2DTransform.h
Operations/: CMakeLists.txt  appOpAddComment.cpp  appOpAddComment.h  appOpApplyTemplate.cpp  appOpApplyTemplate.h  appOpCreateEmptyVME.cpp  appOpCreateEmptyVME.h  appOpCreateSurfaceParametric.cpp  appOpCreateSurfaceParametric.h  appOpCreateVMEEmpty.cpp  appOpCreateVMEEmpty.h  appOpCursorTest.cpp  appOpCursorTest.h  appOpDictionary.cpp  appOpDictionary.h  appOpEmpty.cpp  appOpEmpty.h  appOpGuiSample.cpp  appOpGuiSample.h  appOpInteractorSample.cpp  appOpInteractorSample.h  appOpInteractorSliderSample.cpp  appOpInteractorSliderSample.h  appOpInteractorTest.cpp  appOpInteractorTest.h  appOpMeasure2D.cpp  appOpMeasure2D.h  appOpShowDialog.cpp  appOpShowDialog.h  appOpShowImage.cpp  appOpShowImage.h  appOpTransformInteractor.cpp  appOpTransformInteractor.h  appOperationsDefines.h.in
Testing/: CMakeLists.txt  appFakeLogicForTest.cpp  appFakeLogicForTest.h  appTest.cpp  appTest.h
Testing/Operations/: CMakeLists.txt  appOpEmptyTest.cpp  appOpEmptyTest.h  appOperationsTests.cpp  appOperationsTests.h
VME/: CMakeLists.txt  appEmptyVME.cpp  appEmptyVME.h  appVMEDefines.h.in  appVMESurfaceParametric.cpp  appVMESurfaceParametric.h
Views/: CMakeLists.txt  appViewImageCompound.cpp  appViewImageCompound.h  appViewsDefines.h.in
pic/: COMMENT_HIDE_ICON.xpm  COMMENT_ICON.xpm  COMMENT_SHOW_ICON.xpm  FILE_NEW_ICON.xpm  FILE_OPEN_ICON.xpm  FILE_SAVE_ICON.xpm  FRACTURE_MEASURE_ICON.xpm  FRAME_ICON128x128.xpm  FRAME_ICON16x16.xpm  FRAME_ICON256x256.xpm  FRAME_ICON32x32.xpm  FRAME_ICON64x64.xpm  IMPORT_DICOM_ICON.xpm  IMPORT_IMAGE_ICON.xpm  IMPORT_VTK_ICON.xpm  KAUPPILA_RATE_ICON.xpm  MEASURE_2D_ICON.xpm  MENU_OP_COMMENT.xpm  MIRROR_ICON.xpm  OCCLUSION_MEASURE_ICON.xpm  RESET_LUT_ICON.xpm  SET_LUT1_ICON.xpm  SET_LUT2_ICON.xpm  VERTEBRAE_MEASURE_ICON.xpm  VIEW_IMAGE_ICON.xpm  VME_PROCEDURAL_ICON.xpm
pic/Cursor/: Rotate.xpm
